force-app/main/default/objects/Deliverable__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <inlineHelpText>The date this deliverable was actually completed.</inlineHelpText>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>