force-app/main/default/objects/Deliverable__c/fields/Deliverable_Name__c.field-meta.xml
<CustomField>
    <fullName>Deliverable_Name__c</fullName>
    <label>Deliverable Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>