force-app/main/default/objects/Deliverable__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tickets</fullName>
            </value>
            <value>
                <fullName>Ads</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Activations</fullName>
            </value>
            <value>
                <fullName>Progress Report</fullName>
            </value>
            <value>
                <fullName>Financial Report</fullName>
            </value>
            <value>
                <fullName>Program Metrics</fullName>
            </value>
            <value>
                <fullName>Site Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>