force-app/main/default/objects/Deliverable__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Quantity__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Deliverables</label>
</ListView>