force-app/main/default/objects/Deliverable__c/listViews/Deliverables_In_Progress.listView-meta.xml
<ListView>
    <fullName>Deliverables_In_Progress</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Quantity__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>Deliverables In Progress</label>
</ListView>