force-app/main/default/objects/Deliverable__c/listViews/Deliverables_Past_Due.listView-meta.xml
<ListView>
    <fullName>Deliverables_Past_Due</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Quantity__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Due_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Deliverables Past Due</label>
</ListView>