force-app/main/default/objects/Deliverable__c/listViews/Upcoming_Deliverable_Due_Dates.listView-meta.xml
<ListView>
    <fullName>Upcoming_Deliverable_Due_Dates</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Quantity__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Due_Date__c</field>
        <operation>lessThan</operation>
        <value>NEXT_MONTH</value>
    </filters>
    <label>Upcoming Deliverable Due Dates</label>
</ListView>